# Sandbox

./: .gitignore  CMakeLists.txt  Example.cpp  Example.hpp  ExceptionalServer.cpp  ExceptionalServer.hpp  InheritedCode.cpp  InheritedCode.hpp  MagicSpells.cpp  MagicSpells.hpp
tests/: CMakeLists.txt  ExampleTest  ExampleTest.cpp  ExceptionalServerTests.cpp  InheritedCodeTests.cpp  MagicSpellsTests.cpp
